@@ -51,6 +51,7 @@ John Goerzen <jgoerzen@complete.org>
 John Tobey <spam@john-edwin-tobey.org>
 Josip Rodin <joy@cibalia.gkvk.hr>
 Julien Bordet <julien.bordet@int-evry.fr>
+Julien Perrot <julien.perrot@iie.cnam.fr>
 Kalle Olavi Niemitalo <tosi@ees2.oulu.fi>
 Khimenko Victor <grub@khim.sch57.msk.ru>
 Klaus Reichl <klaus.reichl@alcatel.at>
